# clever-assesment

./: README.md  pyproject.toml  requirements.txt  setup.py
data/output/: README.md  output.csv
data/output/time_series/: median_sale_price_analysis.csv
data_analyzer/: cli.py  data_processor.py  logger.py  time_series_analyzer.py  utils.py
