[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-analyzer"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A data analysis tool for processing CSV files"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "rich>=13.0.0",
    "pytest>=7.0.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "geopandas>=0.10.0",
    "click>=8.0.0",
]

[project.scripts]
data-analyzer = "data_analyzer.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 